--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Build Docker
       run: docker build -t go-backend-app .
     - name: Az Login
-      run: az acr login -- name gobackendapp1.azurecr.io
+      run: az acr login -n paktradebackend --expose-token
     - name: Docker Tag
       run: docker tag go-backend-app gobackendapp1.azurecr.io/go-backend-app
     - name: Docker Push
