--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,18 +19,10 @@ jobs:
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     - name: Build Docker
       run: docker build -t go-backend-app .
-    - name: 'Az CLI login'
+    - name: Azure Login
       uses: azure/login@v1
       with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          enable-AzPSSession: true 
-    - name: 'Run az commands'
-      run: |
-       az account show
-       az group list
-       pwd
+        creds: ${{ secrets.AZURE_CREDENTIALS }} 
     - name: Azure Container Registery Login
       run: az acr login -n paktradebackend --expose-token
     - name: Docker Tag
