--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag paktradebackend .
     - name: Build Docker
       run: docker build -t go-backend-app .
     - name: Azure Login
@@ -26,7 +26,7 @@ jobs:
     - name: Azure Container Registery Login
       run: az acr login -n paktradebackend --expose-token
     - name: Docker Tag
-      run: docker tag go-backend-app gobackendapp1.azurecr.io/go-backend-app
+      run: docker tag paktradebackend paktradebackend.azurecr.io/paktradebackend
     - name: Docker Push
-      run: docker push gobackendapp1.azurecr.io/go-backend-app
+      run: docker push paktradebackend.azurecr.io/paktradebackend
       
