--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,9 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag paktradebackend .
-    - name: Build Docker
-      run: docker build -t go-backend-app .
+      run: build . --file Dockerfile --tag my-image-name:$(date +%s)
     - name: Azure Login
       uses: azure/login@v1
       with:
