--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,8 +23,8 @@ jobs:
       with:
        creds: ${{ secrets.AZURE_CREDENTIALS }} 
        
-       
-    - name: Azure Container Registery Login
+ #   - name: Azure Container Registery Login
+    - uses: actions/checkout@v2
     - uses: azure/docker-login@v1
       with:
         login-server: paktradebackend.azurecr.io
