--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag paktradebackend
+   # - uses: actions/checkout@v3
+   # - name: Build the Docker image
+    #  run: docker build . --file Dockerfile --tag paktradebackend
       
     - name: Azure Login
       uses: azure/login@v1
