--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,8 +31,8 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t paktradebackend.azurecr.io/myapp:${{ github.sha }}
-        docker push mycontainer.azurecr.io/myapp:${{ github.sha }}      
+        docker build . -t paktradebackend.azurecr.io/paktradebackend:${{ github.sha }}
+        docker push mycontainer.azurecr.io/paktradebackend:${{ github.sha }}      
    # - name: Docker Tag
     #  run: docker tag paktradebackend paktradebackend.azurecr.io/paktradebackend
     #- name: Docker Push
